# ai-agent-outreach-email

./: .gitignore  AUTO_IMPROVEMENT_IMPLEMENTATION_PLAN.md  AUTO_IMPROVEMENT_README.md  AUTO_IMPROVEMENT_SPEC.md  CHANGELOG.md  CLAUDE.md  README.md  SUCCESS_REPORT.md  TEST_CRITERIA.md  analyze_live_email.py  analyze_successful_run.py  analyze_system_failures.py  auto_improve_crew.py  example.env  final_welcome_email.html  manual_validation.py  pyproject.toml  requirements.txt  test-validation.sh  test_10_runs.py  test_enhanced_intent.py  test_quality_system.py  test_selling_intent.py
deployment/: deploy_and_run_agent_locally.sh  deploy_and_run_agent_locally_via_agentic_api.sh  runtime-bug-report.md
scripts/: comprehensive-agent-test.sh  monitor-agent-crash.sh  monitor-cloud-run.sh  run-the-agent-in-cloud-runner.sh  start-local-k8-platform-port-forward.sh  start-local-k8-salesagent-port-forward.sh  test-agent-deployment.sh
src/personalized_welcome_email/: crew.py  main.py
src/personalized_welcome_email/config/: agents.yaml  tasks.yaml
src/sales_personalized_email/: auto_improvement_wrapper.py  crew.py  email_quality_validator.py  failure_analyzer.py  main.py  prompt_adapter.py  prospect_generator.py  test_runner.py
src/sales_personalized_email/config/: agents.yaml  tasks.yaml
streamlit_app/: app.py
