[project]
name = "personalized_welcome_email"
version = "0.1.0"
description = "personalized-welcome-email using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai>=0.114.0",
    "crewai-tools>=0.42.0",
    "langchain-core>=0.2.30",
]

[project.scripts]
personalized_welcome_email = "personalized_welcome_email.main:run"
run_crew = "personalized_welcome_email.main:run"
train = "personalized_welcome_email.main:train"
replay = "personalized_welcome_email.main:replay"
test = "personalized_welcome_email.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
